# visual_wake_words

./: .gitignore  CMakeLists.txt  Kconfig  README.md  gaptest.yml  nntool_generate_model.py  sdk.config  test_model.ipynb  vww.c  vww.h  vww_demo.c
images/: COCO_val2014_000000174838_1.ppm  COCO_val2014_000000174838_1_160x120.ppm  COCO_val2014_000000174838_1_258x208.ppm  COCO_val2014_000000174838_1_96x96.ppm
